--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(libs/imgui/examples)
 include_directories(libs/imgui/misc/cpp)
 include_directories(libs/imgui/misc/freetype)
 include_directories(libs/imgui/misc/single_file)
+include_directories(libs/stb)
 include_directories(/usr/include/SDL2) # Probably only works on Linux, TODO fix
 
 add_executable(editor
@@ -25,5 +26,5 @@ add_executable(editor
         libs/imgui/imgui_widgets.cpp
         libs/imgui/imstb_rectpack.h
         libs/imgui/imstb_textedit.h
-        libs/imgui/imstb_truetype.h src/editor.cpp src/editor.h)
+        libs/imgui/imstb_truetype.h src/editor.cpp src/editor.h libs/stb/stb_image.h src/textures.cpp src/textures.h)
 
