--- a/editor/Makefile
+++ b/editor/Makefile
@@ -15,7 +15,7 @@
 #CXX = clang++
 
 EXE = mwgeditor
-SOURCES = src/main.cpp src/editor.cpp src/textures.cpp
+SOURCES = $(wildcard src/*.cpp)
 SOURCES += libs/imgui/examples/imgui_impl_sdl.cpp libs/imgui/examples/imgui_impl_opengl3.cpp
 SOURCES += libs/imgui/imgui.cpp libs/imgui/imgui_demo.cpp libs/imgui/imgui_draw.cpp libs/imgui/imgui_widgets.cpp
 OBJS = $(addsuffix .o, $(basename $(notdir $(SOURCES))))
