Clean up dependency files when using make clean

--- a/editor/Makefile
+++ b/editor/Makefile
@@ -104,6 +104,6 @@ $(EXE): $(OBJS)
 	$(CXX) -o $@ $^ $(CXXFLAGS) $(LIBS)
 
 clean:
-	rm -f $(EXE) $(OBJS)
+	rm -f $(EXE) $(OBJS) *.d
 
 -include $(OBJS:.o=.d)
